// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> it renders a Button flat 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #3e486e;
  background: #fff;
  border-color: #bbcadf;
  box-shadow: none;
  opacity: 1;
}

.c0:link,
.c0:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e486e;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):active,
.c0:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #fff;
  border-color: #dee5ef;
}

.c0[disabled] {
  color: rgba(62,72,110,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 4rem;
  padding: 0 3rem;
  color: #3e486e;
  background: #fff;
  border-color: #bbcadf;
  box-shadow: none;
  opacity: 1;
}

.c1:link,
.c1:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e486e;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):active,
.c1:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #fff;
  border-color: #dee5ef;
}

.c1[disabled] {
  color: rgba(62,72,110,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 1.9rem;
  color: #3e486e;
  background: #fff;
  border-color: #bbcadf;
  box-shadow: none;
  opacity: 1;
}

.c2:link,
.c2:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e486e;
}

.c2:not([disabled]):hover,
.c2:not([disabled]):active,
.c2:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #fff;
  border-color: #dee5ef;
}

.c2[disabled] {
  color: rgba(62,72,110,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

@media (max-width:600px) {
  .c0 {
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {
  .c0 {
    padding: 0 3rem;
  }
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {
  .c2 {
    font-size: 1.4rem;
  }
}

<div>
  <button
    class="c0"
  >
    this is a Button 
    flat
     
  </button>
  <button
    class="c1"
  >
    this is a small Button 
    flat
     
  </button>
  <button
    class="c2"
  >
    this is a narrow Button 
    flat
     
  </button>
</div>
`;

exports[`<Button /> it renders a Button link 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  color: #f66663;
  font-weight: 600;
  font-size: 1.6rem;
  line-height: 1.625;
  text-align: left;
  background: none;
  border: none;
  border-radius: 0;
  overflow: visible;
}

.c1:focus,
.c1:hover,
.c1:active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 {
  width: 2.6rem;
  height: 1.4rem;
  margin-left: 1rem;
  -webkit-transition: -webkit-transform 250ms linear;
  -webkit-transition: transform 250ms linear;
  transition: transform 250ms linear;
}

.c0:hover .c2 {
  -webkit-transform: translateX(5px);
  -ms-transform: translateX(5px);
  transform: translateX(5px);
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.4rem;
  }
}

<div>
  <button
    class="c0 c1"
  >
    this is a Button 
    link
     
    <svg
      class="c2"
      fill="none"
      viewBox="0 0 28 15"
    >
      <path
        d="M27.875 7.153l-6-6.284a.526.526 0 00-.711-.023.496.496 0 00-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 00.024.687.52.52 0 00.711-.023l6-6.284a.506.506 0 000-.665z"
        fill="currentColor"
      />
    </svg>
  </button>
  <button
    class="c0 c1"
  >
    this is a small Button 
    link
     
    <svg
      class="c2"
      fill="none"
      viewBox="0 0 28 15"
    >
      <path
        d="M27.875 7.153l-6-6.284a.526.526 0 00-.711-.023.496.496 0 00-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 00.024.687.52.52 0 00.711-.023l6-6.284a.506.506 0 000-.665z"
        fill="currentColor"
      />
    </svg>
  </button>
  <button
    class="c0 c1"
  >
    this is a narrow Button 
    link
     
    <svg
      class="c2"
      fill="none"
      viewBox="0 0 28 15"
    >
      <path
        d="M27.875 7.153l-6-6.284a.526.526 0 00-.711-.023.496.496 0 00-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 00.024.687.52.52 0 00.711-.023l6-6.284a.506.506 0 000-.665z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;

exports[`<Button /> it renders a Button naked 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #3e486e;
  background: transparent;
  border-color: transparent;
  box-shadow: none;
  opacity: 1;
}

.c0:link,
.c0:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e486e;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):active,
.c0:not([disabled]):focus {
  opacity: 0.6;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: transparent;
  border-color: transparent;
}

.c0[disabled] {
  color: rgba(62,72,110,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 4rem;
  padding: 0 3rem;
  color: #3e486e;
  background: transparent;
  border-color: transparent;
  box-shadow: none;
  opacity: 1;
}

.c1:link,
.c1:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e486e;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):active,
.c1:not([disabled]):focus {
  opacity: 0.6;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: transparent;
  border-color: transparent;
}

.c1[disabled] {
  color: rgba(62,72,110,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 1.9rem;
  color: #3e486e;
  background: transparent;
  border-color: transparent;
  box-shadow: none;
  opacity: 1;
}

.c2:link,
.c2:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e486e;
}

.c2:not([disabled]):hover,
.c2:not([disabled]):active,
.c2:not([disabled]):focus {
  opacity: 0.6;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: transparent;
  border-color: transparent;
}

.c2[disabled] {
  color: rgba(62,72,110,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

@media (max-width:600px) {
  .c0 {
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {
  .c0 {
    padding: 0 3rem;
  }
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {
  .c2 {
    font-size: 1.4rem;
  }
}

<div>
  <button
    class="c0"
  >
    this is a Button 
    naked
     
  </button>
  <button
    class="c1"
  >
    this is a small Button 
    naked
     
  </button>
  <button
    class="c2"
  >
    this is a narrow Button 
    naked
     
  </button>
</div>
`;

exports[`<Button /> it renders a Button primary 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #f66663;
  border-color: #f66663;
  box-shadow: 0px 10px 20px rgba(246,102,99,0.26),0px 5px 7px rgba(246,102,99,0.35);
  opacity: 1;
}

.c1:link,
.c1:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):active,
.c1:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #f99593;
  border-color: #f99593;
}

.c1[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 4rem;
  padding: 0 3rem;
  color: #fff;
  background: #f66663;
  border-color: #f66663;
  box-shadow: 0px 10px 20px rgba(246,102,99,0.26),0px 5px 7px rgba(246,102,99,0.35);
  opacity: 1;
}

.c2:link,
.c2:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c2:not([disabled]):hover,
.c2:not([disabled]):active,
.c2:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #f99593;
  border-color: #f99593;
}

.c2[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 1.9rem;
  color: #fff;
  background: #f66663;
  border-color: #f66663;
  box-shadow: 0px 10px 20px rgba(246,102,99,0.26),0px 5px 7px rgba(246,102,99,0.35);
  opacity: 1;
}

.c3:link,
.c3:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c3:not([disabled]):hover,
.c3:not([disabled]):active,
.c3:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #f99593;
  border-color: #f99593;
}

.c3[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c0:hover .c4 {
  -webkit-transform: translateX(5px);
  -ms-transform: translateX(5px);
  transform: translateX(5px);
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {
  .c1 {
    padding: 0 3rem;
  }
}

@media (max-width:600px) {
  .c2 {
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {
  .c3 {
    font-size: 1.4rem;
  }
}

<div>
  <button
    class="c0 c1"
  >
    this is a Button 
    primary
     
  </button>
  <button
    class="c0 c2"
  >
    this is a small Button 
    primary
     
  </button>
  <button
    class="c0 c3"
  >
    this is a narrow Button 
    primary
     
  </button>
</div>
`;

exports[`<Button /> it renders a Button secondary 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #7994d4;
  border-color: #7994d4;
  box-shadow: 0px 10px 20px rgba(121,148,212,0.26),0px 5px 7px rgba(121,148,212,0.35);
  opacity: 1;
}

.c1:link,
.c1:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):active,
.c1:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #a0b3e0;
  border-color: #a0b3e0;
}

.c1[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 4rem;
  padding: 0 3rem;
  color: #fff;
  background: #7994d4;
  border-color: #7994d4;
  box-shadow: 0px 10px 20px rgba(121,148,212,0.26),0px 5px 7px rgba(121,148,212,0.35);
  opacity: 1;
}

.c2:link,
.c2:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c2:not([disabled]):hover,
.c2:not([disabled]):active,
.c2:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #a0b3e0;
  border-color: #a0b3e0;
}

.c2[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 1.9rem;
  color: #fff;
  background: #7994d4;
  border-color: #7994d4;
  box-shadow: 0px 10px 20px rgba(121,148,212,0.26),0px 5px 7px rgba(121,148,212,0.35);
  opacity: 1;
}

.c3:link,
.c3:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c3:not([disabled]):hover,
.c3:not([disabled]):active,
.c3:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #a0b3e0;
  border-color: #a0b3e0;
}

.c3[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c0:hover .c4 {
  -webkit-transform: translateX(5px);
  -ms-transform: translateX(5px);
  transform: translateX(5px);
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {
  .c1 {
    padding: 0 3rem;
  }
}

@media (max-width:600px) {
  .c2 {
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {
  .c3 {
    font-size: 1.4rem;
  }
}

<div>
  <button
    class="c0 c1"
  >
    this is a Button 
    secondary
     
  </button>
  <button
    class="c0 c2"
  >
    this is a small Button 
    secondary
     
  </button>
  <button
    class="c0 c3"
  >
    this is a narrow Button 
    secondary
     
  </button>
</div>
`;

exports[`<Button /> renders 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #7994d4;
  border-color: #7994d4;
  box-shadow: 0px 10px 20px rgba(121,148,212,0.26),0px 5px 7px rgba(121,148,212,0.35);
  opacity: 1;
}

.c0:link,
.c0:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):active,
.c0:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #a0b3e0;
  border-color: #a0b3e0;
}

.c0[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

@media (max-width:600px) {
  .c0 {
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {
  .c0 {
    padding: 0 3rem;
  }
}

<div>
  <button
    class="c0"
  >
    A button
  </button>
</div>
`;

exports[`<Button /> renders as a link 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #7994d4;
  border-color: #7994d4;
  box-shadow: 0px 10px 20px rgba(121,148,212,0.26),0px 5px 7px rgba(121,148,212,0.35);
  opacity: 1;
}

.c0:link,
.c0:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):active,
.c0:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #a0b3e0;
  border-color: #a0b3e0;
}

.c0[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

@media (max-width:600px) {
  .c0 {
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {
  .c0 {
    padding: 0 3rem;
  }
}

<div>
  <a
    class="c0"
    href="http://www.turfu.com"
  >
    A button
  </a>
</div>
`;

exports[`<Button /> renders as div 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #7994d4;
  border-color: #7994d4;
  box-shadow: 0px 10px 20px rgba(121,148,212,0.26),0px 5px 7px rgba(121,148,212,0.35);
  opacity: 1;
}

.c0:link,
.c0:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):active,
.c0:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #a0b3e0;
  border-color: #a0b3e0;
}

.c0[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

@media (max-width:600px) {
  .c0 {
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {
  .c0 {
    padding: 0 3rem;
  }
}

<div>
  <div
    class="c0"
  >
    A button
  </div>
</div>
`;
